# CV-toolkit

./: .gitignore  README.md
motion-detection/: CMakeLists.txt
motion-detection/src/: Info.plist  MotionDetection.cxx
pyramid-blending/: CMakeLists.txt
pyramid-blending/include/: Pyramid.h
pyramid-blending/src/: Blending.cxx  Pyramid.cxx
